name: hasql-tutorial1
version: 0.1
build-type: Simple
cabal-version: >=1.24

library
  hs-source-dirs: library
  default-extensions: ApplicativeDo, Arrows, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    HasqlTutorial1.Session
  other-modules:
    HasqlTutorial1.Prelude
    HasqlTutorial1.Statement
    HasqlTutorial1.Transaction
  build-depends:
    hasql >=1.4 && <1.5,
    hasql-transaction >=0.9 && <0.10,
    rerebase >=1.4 && <1.5
